--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,39 +6,7 @@ events {
 }
 
 http {
+    include inc*.conf;
+    error_log logs/error.log debug;
     lua_package_path "./lua/libs/?.lua;./lua/?.lua;;";
-    upstream apache.org {
-        server apache.org;
-    }
-
-    upstream nginx.org {
-        server nginx.org;
-    }
-
-    server {
-        listen 8080;
-
-        location = /redis {
-             redis2_raw_queries 3 "subscribe /foo/bar\r\n";
-             redis2_pass 127.0.0.1:6379;
-        }
-
-        location /game {
-            #add_header Content-Type text/plain;
-            #lua_socket_log_errors off;
-            content_by_lua '
-                local cjson = require "cjson"
-                local game = require "game"
-                local sub_url = ngx.var.uri:sub(7)
-                local cmd = game[sub_url]
-                if cmd then
-                  ngx.req.read_body()
-                  local error, data = cmd(ngx.req.get_body_data())
-                  ngx.print(cjson.encode{err=error, data=data})
-                else
-                  ngx.print("404 "..sub_url)
-                end
-            ';
-        }
-    }
 }
