--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,4 +9,5 @@ http {
     include inc*.conf;
     error_log logs/error.log debug;
     lua_package_path "./lua/libs/?.lua;./lua/?.lua;;";
+    lua_code_cache off;
 }
