--- a/conf/inc_game.conf
+++ b/conf/inc_game.conf
@@ -8,18 +8,22 @@ server {
         #lua_socket_log_errors off;
         lua_check_client_abort on;
 
-        content_by_lua '
+        content_by_lua_block{
             local cjson = require "cjson"
             local game = require "game"
             local sub_url = ngx.var.uri:sub(7)
             local cmd = game[sub_url]
             if cmd then
               ngx.req.read_body()
-              local error, data = cmd(ngx.req.get_body_data())
-              ngx.print(cjson.encode{err=error, data=data})
+              local ok, error, data = pcall(cmd, ngx.req.get_body_data())
+              if ok then
+                ngx.print(cjson.encode{err=error, data=data})
+              else
+                ngx.print(cjson.encode{err=1, data=error})
+              end
             else
               ngx.print("404 "..sub_url)
             end
-        ';
+        }
     }
 }
