server-broadcast mail

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,4 +10,17 @@ http {
     error_log logs/error.log debug;
     lua_package_path "./lua/libs/?.lua;./lua/?.lua;;";
     lua_code_cache off;
+    lua_shared_dict mail 2m;
+
+    init_by_lua_block {
+      local mail = require 'mail'
+      local _update = function()
+        mail.update()
+        ngx.timer.at(3, _update)
+
+        ngx.log(ngx.ERR, 'timer xxxxxx')                
+      end
+      ngx.timer.at(3, _update)
+    }
+
 }
