add gm commands

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,17 +10,18 @@ http {
     error_log logs/error.log debug;
     lua_package_path "./lua/libs/?.lua;./lua/?.lua;;";
     lua_code_cache off;
-    lua_shared_dict mail 2m;
+    lua_shared_dict shared_mail_poll 2m;
+    lua_shared_dict shared_gm_poll 2m;
 
-    init_by_lua_block {
-      local mail = require 'mail'
-      local _update = function()
-        mail.update()
-        ngx.timer.at(3, _update)
+    init_worker_by_lua_block {
+      --local mail = require 'mail'
+      --local function _update()
+        --mail.update()
+        --ngx.timer.at(3, _update)
 
-        ngx.log(ngx.ERR, 'timer xxxxxx')                
-      end
-      ngx.timer.at(3, _update)
+      --  ngx.log(ngx.ERR, 'timer xxxxxx')                
+      --end
+      --ngx.timer.at(3, _update)
     }
 
 }
